# docforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
docforge_instance_实例/: config.json  run_workflow.py  workflow.json
docforge_instance_实例/input/: 2601-心理汇总表.xlsx
docforge_instance_实例/plugins/: date_string_formatter.py  date_string_formatter_README.md  docx_combiner.py  docx_combiner_README.md  docx_replacer.py  docx_replacer_README.md  excel_extractor.py  excel_extractor_README.md  excel_replacer.py  excel_replacer_README.md  number_string_formatter.py  number_string_formatter_README.md  placeholder_splitter.py  placeholder_splitter_README.md
docforge_pip_pip包/: pyproject.toml  requirements.txt  setup.py
docforge_pip_pip包/docforge/: README.md  __init__.py  cli.py  constants.py  exceptions.py  types.py
docforge_pip_pip包/docforge/api/: README.md  __init__.py  core_api.py  event_bus.py  plugin_api.py
docforge_pip_pip包/docforge/plugins/: README.md  __init__.py  base.py  loader.py  registry.py  types.py
docforge_pip_pip包/docforge/services/: README.md  __init__.py  file_manager.py  logger.py  plugin_manager.py  project_manager.py  workflow_engine.py
docforge_pip_pip包/docforge/storage/: README.md  __init__.py  cache.py  config.py  database.py
docforge_pip_pip包/docforge/utils/: README.md  __init__.py  file_utils.py  string_utils.py  template_engine.py  validators.py
docforge_tutorial_教程/: 00_绪论与API汇总.md  01_实例编写及使用.md  02_工作流编写及使用.md  03_插件编写及使用.md  04_pip包导入.md  05_总体组合运行方法.md  06_总结.md  PLUGIN_DEVELOPMENT_GUIDE.md  TROUBLESHOOTING_GUIDE.md
(+2 files in other folders)
